--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=ASuX9jZo1bGLaMKsVLhg5L3fJM46OA6R
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
